update path for unit testing with go

--- a/.github/workflows/ci_backend.yml
+++ b/.github/workflows/ci_backend.yml
@@ -46,6 +46,6 @@ jobs:
 
       - name: Run Unit Tests
         working-directory: src/provisioning
-        run: go test
+        run: go test ./...
 
 
