--- a/src/frontend/hosting/package.json
+++ b/src/frontend/hosting/package.json
@@ -8,8 +8,8 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "prettier:format": "prettier --write \"**/*.{ts,tsx,js,md,mdx,css,yaml,html}\"",
-    "prettier:check": "prettier --check \"**/*.{ts,tsx,js,md,mdx,css,yaml,html}\""
+    "prettier:format": "prettier --write \"**/*.{ts,tsx,js,md,mdx,css,yaml,html,svelte}\"",
+    "prettier:check": "prettier --check \"**/*.{ts,tsx,js,md,mdx,css,yaml,html,svelte}\""
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
@@ -21,7 +21,8 @@
     "flowbite": "^2.5.2",
     "flowbite-svelte": "^0.47.3",
     "flowbite-svelte-icons": "^2.0.2",
-    "prettier": "3.3.3",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.7",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.9",
