--- a/.github/workflows/ci_frontend.yml
+++ b/.github/workflows/ci_frontend.yml
@@ -25,4 +25,4 @@ jobs:
         working-directory: ./src/frontend/hosting
       - name: Check formatting with Prettier
         working-directory: ./src/frontend/hosting  # Run Prettier in the same directory
-        run: npx prettier --check "**/*.{js,ts,css,html}"
+        run: npx prettier --check "**/*.{ts,tsx,js,md,mdx,css,yaml,html,svelte}"
