--- a/.github/workflows/ci_backend.yml
+++ b/.github/workflows/ci_backend.yml
@@ -26,6 +26,13 @@ jobs:
 
 
   build:
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_HOST_AUTH_METHOD: trust
+        ports:
+          - "5432:5432"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Sources
