--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ go.work.sum
 
 # Intellij-related stuff
 .idea/
+
+# Auth
+auth_config.js
+
+# Remove act (used for local testing of github workflows)
+act
