--- a/src/frontend/hosting/package.json
+++ b/src/frontend/hosting/package.json
@@ -12,7 +12,6 @@
     "prettier:check": "prettier --check \"**/*.{ts,tsx,js,md,mdx,css,yaml,html,svelte}\""
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-node": "^5.2.9",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
@@ -27,6 +26,10 @@
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "vite": "^5.0.3",
+    "@auth0/auth0-spa-js": "^2.1.3"
+  },
+  "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3"
   }
 }
