--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "hosting",
+  "name": "frontend",
   "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "check": "svelte-kit sync && svelte-check --tsconfig tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig tsconfig.json --watch",
     "prettier:format": "prettier --write \"**/*.{ts,tsx,js,md,mdx,css,yaml,html,svelte}\"",
     "prettier:check": "prettier --check \"**/*.{ts,tsx,js,md,mdx,css,yaml,html,svelte}\""
   },
   "devDependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3",
     "@sveltejs/adapter-node": "^5.2.9",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
@@ -26,8 +27,7 @@
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "@auth0/auth0-spa-js": "^2.1.3"
+    "vite": "^5.0.3"
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^2.1.3"
