moved the frontend one folder higher

--- a/.github/workflows/ci_frontend.yml
+++ b/.github/workflows/ci_frontend.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: npm install
-        working-directory: ./src/frontend/frontend
+        working-directory: ./src/frontend/
       - name: Check formatting with Prettier
-        working-directory: ./src/frontend/frontend  # Run Prettier in the same directory
+        working-directory: ./src/frontend/  # Run Prettier in the same directory
         run: npx prettier --check "**/*.{ts,tsx,js,md,mdx,css,yaml,html,svelte}"
