--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -30,6 +30,7 @@
     "vite": "^5.0.3"
   },
   "dependencies": {
-    "@auth0/auth0-spa-js": "^2.1.3"
+    "@auth0/auth0-spa-js": "^2.1.3",
+    "uuid": "^11.0.5"
   }
 }
