--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -27,10 +27,10 @@
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "vite": "^5.0.3",
+    "uuid": "^11.0.5"
   },
   "dependencies": {
-    "@auth0/auth0-spa-js": "^2.1.3",
-    "uuid": "^11.0.5"
+
   }
 }
