--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -1,21 +1,23 @@
 # when running local without compose:
     # docker build -t svelte .
     # docker run -p 3000:3000 svelte
+    # docker run -p 3000:3000 --env-file ./.env svelte
     # http://localhost:3000/
 
-FROM node:18-alpine AS builder
-WORKDIR /app
-COPY package*.json .
-RUN npm ci
-COPY . .
-RUN npm run build
-RUN npm prune --production
+FROM node:20 AS builder
 
-FROM node:18-alpine
 WORKDIR /app
-COPY --from=builder /app/build build/
-COPY --from=builder /app/node_modules node_modules/
-COPY package.json .
-EXPOSE 3000
-ENV NODE_ENV=production
-CMD [ "node", "build" ]
+
+COPY . .
+
+RUN npm install
+RUN npm run build
+
+FROM node:20
+
+WORKDIR /app
+
+COPY package*.json .
+COPY --from=builder /app/build .
+
+CMD [ "node", "index.js" ]
