--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -21,16 +21,16 @@
     "flowbite": "^2.5.2",
     "flowbite-svelte": "^0.47.3",
     "flowbite-svelte-icons": "^2.0.2",
+    "minecraft-server-util": "^5.4.4",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.7",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "vite": "^5.0.3"
   },
   "dependencies": {
-
   }
 }
